# boilerplate-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
.circleci/: config.yml
.github/workflows/: ci.yml
include/: core.h
src/: core.cpp  main.cpp
test/: main_test.cpp
